Refactor: review list