@@ -8,6 +8,7 @@ import lombok.NoArgsConstructor;
 import lombok.Setter;
 
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 
 public class ReviewRes {
@@ -41,7 +42,7 @@ public class ReviewRes {
             this.content = review.getContent();
             this.totalScore = review.getTotalScore();
             this.receipt = review.isReceipt();
-            this.images = List.of(review.getImages().split(","));
+            this.images = (review.getImages() != null) ? List.of(review.getImages().split(",")) : Collections.emptyList();
         }
     }
 
@@ -66,7 +67,7 @@ public class ReviewRes {
             this.content = review.getContent();
             this.totalScore = review.getTotalScore();
             this.receipt = review.isReceipt();
-            this.images = List.of(review.getImages().split(","));
+            this.images = (review.getImages() != null) ? List.of(review.getImages().split(",")) : Collections.emptyList();
         }
     }
 
@@ -89,7 +90,7 @@ public class ReviewRes {
             this.content = review.getContent();
             this.totalScore = review.getTotalScore();
             this.receipt = review.isReceipt();
-            this.images = List.of(review.getImages().split(","));
+            this.images = (review.getImages() != null) ? List.of(review.getImages().split(",")) : Collections.emptyList();
         }
     }
 
@@ -112,7 +113,7 @@ public class ReviewRes {
             this.content = review.getContent();
             this.totalScore = review.getTotalScore();
             this.receipt = review.isReceipt();
-            this.images = List.of(review.getImages().split(","));
+            this.images = (review.getImages() != null) ? List.of(review.getImages().split(",")) : Collections.emptyList();
         }
     }
 
@@ -139,7 +140,7 @@ public class ReviewRes {
             this.totalScore = review.getTotalScore();
             this.receipt = review.isReceipt();
             this.payment = review.getPayment();
-            this.images = List.of(review.getImages().split(","));;
+            this.images = (review.getImages() != null) ? List.of(review.getImages().split(",")) : Collections.emptyList();
         }
     }
 
